compilador.output
Terminals unused in grammar

    ATRIBUICAO


Grammar

    0 $accept: programa $end

    1 $@1: ε

    2 programa: $@1 PROGRAM IDENT parametros_ou_nada PONTO_E_VIRGULA bloco PONTO

    3 parametros_ou_nada: parametros
    4                   | nada

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES

    6 nada: ε

    7 $@2: ε

    8 bloco: parte_declara_vars $@2 comando_composto

    9 parte_declara_vars: var

   10 $@3: ε

   11 var: $@3 VAR declara_vars
   12    | declara_var

   13 declara_vars: declara_vars declara_var
   14             | declara_var

   15 $@4: ε

   16 $@5: ε

   17 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

   18 tipo: IDENT

   19 lista_id_var: lista_id_var VIRGULA IDENT
   20             | IDENT

   21 lista_idents: lista_idents VIRGULA IDENT
   22             | IDENT

   23 comando_composto: T_BEGIN comandos T_END

   24 comandos: comandos PONTO_E_VIRGULA comando
   25         | comando

   26 comando: numero_ou_nada

   27 numero_ou_nada: numero DOIS_PONTOS
   28               | nada

   29 numero: NUMERO


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    PROGRAM (258) 2
    ABRE_PARENTESES (259) 5
    FECHA_PARENTESES (260) 5
    VIRGULA (261) 19 21
    PONTO_E_VIRGULA (262) 2 17 24
    DOIS_PONTOS (263) 17 27
    PONTO (264) 2
    T_BEGIN (265) 23
    T_END (266) 23
    VAR (267) 11
    IDENT (268) 2 18 19 20 21 22
    ATRIBUICAO (269)
    NUMERO (270) 29


Nonterminals, with rules where they appear

    $accept (16)
        on left: 0
    programa (17)
        on left: 2
        on right: 0
    $@1 (18)
        on left: 1
        on right: 2
    parametros_ou_nada (19)
        on left: 3 4
        on right: 2
    parametros (20)
        on left: 5
        on right: 3
    nada (21)
        on left: 6
        on right: 4 28
    bloco (22)
        on left: 8
        on right: 2
    $@2 (23)
        on left: 7
        on right: 8
    parte_declara_vars (24)
        on left: 9
        on right: 8
    var (25)
        on left: 11 12
        on right: 9
    $@3 (26)
        on left: 10
        on right: 11
    declara_vars (27)
        on left: 13 14
        on right: 11 13
    declara_var (28)
        on left: 17
        on right: 12 13 14
    $@4 (29)
        on left: 15
        on right: 17
    $@5 (30)
        on left: 16
        on right: 17
    tipo (31)
        on left: 18
        on right: 17
    lista_id_var (32)
        on left: 19 20
        on right: 17 19
    lista_idents (33)
        on left: 21 22
        on right: 5 21
    comando_composto (34)
        on left: 23
        on right: 8
    comandos (35)
        on left: 24 25
        on right: 23 24
    comando (36)
        on left: 26
        on right: 24 25
    numero_ou_nada (37)
        on left: 27 28
        on right: 26
    numero (38)
        on left: 29
        on right: 27


State 0

    0 $accept: • programa $end

    $default  reduce using rule 1 ($@1)

    programa  go to state 1
    $@1       go to state 2


State 1

    0 $accept: programa • $end

    $end  shift, and go to state 3


State 2

    2 programa: $@1 • PROGRAM IDENT parametros_ou_nada PONTO_E_VIRGULA bloco PONTO

    PROGRAM  shift, and go to state 4


State 3

    0 $accept: programa $end •

    $default  accept


State 4

    2 programa: $@1 PROGRAM • IDENT parametros_ou_nada PONTO_E_VIRGULA bloco PONTO

    IDENT  shift, and go to state 5


State 5

    2 programa: $@1 PROGRAM IDENT • parametros_ou_nada PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  shift, and go to state 6

    $default  reduce using rule 6 (nada)

    parametros_ou_nada  go to state 7
    parametros          go to state 8
    nada                go to state 9


State 6

    5 parametros: ABRE_PARENTESES • lista_idents FECHA_PARENTESES

    IDENT  shift, and go to state 10

    lista_idents  go to state 11


State 7

    2 programa: $@1 PROGRAM IDENT parametros_ou_nada • PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  shift, and go to state 12


State 8

    3 parametros_ou_nada: parametros •

    $default  reduce using rule 3 (parametros_ou_nada)


State 9

    4 parametros_ou_nada: nada •

    $default  reduce using rule 4 (parametros_ou_nada)


State 10

   22 lista_idents: IDENT •

    $default  reduce using rule 22 (lista_idents)


State 11

    5 parametros: ABRE_PARENTESES lista_idents • FECHA_PARENTESES
   21 lista_idents: lista_idents • VIRGULA IDENT

    FECHA_PARENTESES  shift, and go to state 13
    VIRGULA           shift, and go to state 14


State 12

    2 programa: $@1 PROGRAM IDENT parametros_ou_nada PONTO_E_VIRGULA • bloco PONTO

    IDENT     reduce using rule 15 ($@4)
    $default  reduce using rule 10 ($@3)

    bloco               go to state 15
    parte_declara_vars  go to state 16
    var                 go to state 17
    $@3                 go to state 18
    declara_var         go to state 19
    $@4                 go to state 20


State 13

    5 parametros: ABRE_PARENTESES lista_idents FECHA_PARENTESES •

    $default  reduce using rule 5 (parametros)


State 14

   21 lista_idents: lista_idents VIRGULA • IDENT

    IDENT  shift, and go to state 21


State 15

    2 programa: $@1 PROGRAM IDENT parametros_ou_nada PONTO_E_VIRGULA bloco • PONTO

    PONTO  shift, and go to state 22


State 16

    8 bloco: parte_declara_vars • $@2 comando_composto

    $default  reduce using rule 7 ($@2)

    $@2  go to state 23


State 17

    9 parte_declara_vars: var •

    $default  reduce using rule 9 (parte_declara_vars)


State 18

   11 var: $@3 • VAR declara_vars

    VAR  shift, and go to state 24


State 19

   12 var: declara_var •

    $default  reduce using rule 12 (var)


State 20

   17 declara_var: $@4 • lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 25

    lista_id_var  go to state 26


State 21

   21 lista_idents: lista_idents VIRGULA IDENT •

    $default  reduce using rule 21 (lista_idents)


State 22

    2 programa: $@1 PROGRAM IDENT parametros_ou_nada PONTO_E_VIRGULA bloco PONTO •

    $default  reduce using rule 2 (programa)


State 23

    8 bloco: parte_declara_vars $@2 • comando_composto

    T_BEGIN  shift, and go to state 27

    comando_composto  go to state 28


State 24

   11 var: $@3 VAR • declara_vars

    $default  reduce using rule 15 ($@4)

    declara_vars  go to state 29
    declara_var   go to state 30
    $@4           go to state 20


State 25

   20 lista_id_var: IDENT •

    $default  reduce using rule 20 (lista_id_var)


State 26

   17 declara_var: $@4 lista_id_var • DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA
   19 lista_id_var: lista_id_var • VIRGULA IDENT

    VIRGULA      shift, and go to state 31
    DOIS_PONTOS  shift, and go to state 32


State 27

   23 comando_composto: T_BEGIN • comandos T_END

    NUMERO  shift, and go to state 33

    $default  reduce using rule 6 (nada)

    nada            go to state 34
    comandos        go to state 35
    comando         go to state 36
    numero_ou_nada  go to state 37
    numero          go to state 38


State 28

    8 bloco: parte_declara_vars $@2 comando_composto •

    $default  reduce using rule 8 (bloco)


State 29

   11 var: $@3 VAR declara_vars •
   13 declara_vars: declara_vars • declara_var

    IDENT     reduce using rule 15 ($@4)
    $default  reduce using rule 11 (var)

    declara_var  go to state 39
    $@4          go to state 20


State 30

   14 declara_vars: declara_var •

    $default  reduce using rule 14 (declara_vars)


State 31

   19 lista_id_var: lista_id_var VIRGULA • IDENT

    IDENT  shift, and go to state 40


State 32

   17 declara_var: $@4 lista_id_var DOIS_PONTOS • tipo $@5 PONTO_E_VIRGULA

    IDENT  shift, and go to state 41

    tipo  go to state 42


State 33

   29 numero: NUMERO •

    $default  reduce using rule 29 (numero)


State 34

   28 numero_ou_nada: nada •

    $default  reduce using rule 28 (numero_ou_nada)


State 35

   23 comando_composto: T_BEGIN comandos • T_END
   24 comandos: comandos • PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  shift, and go to state 43
    T_END            shift, and go to state 44


State 36

   25 comandos: comando •

    $default  reduce using rule 25 (comandos)


State 37

   26 comando: numero_ou_nada •

    $default  reduce using rule 26 (comando)


State 38

   27 numero_ou_nada: numero • DOIS_PONTOS

    DOIS_PONTOS  shift, and go to state 45


State 39

   13 declara_vars: declara_vars declara_var •

    $default  reduce using rule 13 (declara_vars)


State 40

   19 lista_id_var: lista_id_var VIRGULA IDENT •

    $default  reduce using rule 19 (lista_id_var)


State 41

   18 tipo: IDENT •

    $default  reduce using rule 18 (tipo)


State 42

   17 declara_var: $@4 lista_id_var DOIS_PONTOS tipo • $@5 PONTO_E_VIRGULA

    $default  reduce using rule 16 ($@5)

    $@5  go to state 46


State 43

   24 comandos: comandos PONTO_E_VIRGULA • comando

    NUMERO  shift, and go to state 33

    $default  reduce using rule 6 (nada)

    nada            go to state 34
    comando         go to state 47
    numero_ou_nada  go to state 37
    numero          go to state 38


State 44

   23 comando_composto: T_BEGIN comandos T_END •

    $default  reduce using rule 23 (comando_composto)


State 45

   27 numero_ou_nada: numero DOIS_PONTOS •

    $default  reduce using rule 27 (numero_ou_nada)


State 46

   17 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 • PONTO_E_VIRGULA

    PONTO_E_VIRGULA  shift, and go to state 48


State 47

   24 comandos: comandos PONTO_E_VIRGULA comando •

    $default  reduce using rule 24 (comandos)


State 48

   17 declara_var: $@4 lista_id_var DOIS_PONTOS tipo $@5 PONTO_E_VIRGULA •

    $default  reduce using rule 17 (declara_var)
